adicionado estilo,e organazando o codigo

--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <script src="index.js" defer></script>
 </head>
 <body>
     <div>
-        <h3>Contato</h3>
+        <h2>Contatos</h2>
         <label for="name" >Nome:</label>
         <input type="text" name="name" id="inName" placeholder="Digite Seu Nome">
-        <label for="cel">CEl:</label>
+        <label for="cel">Cel:</label>
         <input  type="number" name="cel" id="inCel" placeholder="Digite Seu Numero">
         <button>
             <span id="btnCadastrar">Cadastrar</span>
